<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_store" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_product" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/bill"
        android:title="@string/menu_bill" />
    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/thongke"
        android:title="@string/menu_statistical" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/group"
        android:title="@string/menu_employees" />
    <item
        android:id="@+id/nav_send"
        android:icon="@drawable/exit"
        android:title="@string/menu_logout" />
</menu>

