<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_40sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_42sdp"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/_12sdp"
                        android:paddingRight="@dimen/_12sdp">

                        <ImageView
                            android:id="@+id/imgCategory"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_category" />

                        <TextView
                            android:id="@+id/tvTitleCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_12sdp"
                            android:layout_toRightOf="@+id/imgCategory"
                            android:gravity="center"
                            android:text="@string/my_selling_category"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_12sdp" />

                        <RelativeLayout
                            android:id="@+id/rlCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tvTitleCategory">

                            <TextView
                                android:id="@+id/tvCategory"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_toLeftOf="@+id/imgCategoryNext"
                                android:ellipsize="end"
                                android:gravity="center|end"
                                android:maxLines="1"
                                android:padding="@dimen/_5sdp"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/_12sdp" />

                            <ImageView
                                android:id="@+id/imgCategoryNext"
                                android:layout_width="@dimen/_12sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_next" />
                        </RelativeLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_12sdp"
                        android:background="@color/colorPrimary" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_42sdp"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/_12sdp"
                        android:paddingRight="@dimen/_12sdp">

                        <ImageView
                            android:id="@+id/imgPrice"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_price" />

                        <TextView
                            android:id="@+id/tvTitlePrice"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_12sdp"
                            android:layout_toRightOf="@+id/imgPrice"
                            android:gravity="center"
                            android:text="@string/my_selling_price"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_12sdp" />


                        <RelativeLayout
                            android:id="@+id/rlPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/tvTitlePrice">


                            <EditText
                                android:id="@+id/tvPrice"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/background_light"
                                android:gravity="center|end"
                                android:maxLines="1"
                                android:inputType="number"
                                android:padding="@dimen/_5sdp"
                                android:textColor="@android:color/holo_blue_dark"
                                android:textSize="@dimen/_12sdp" />


                        </RelativeLayout>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_12sdp"
                        android:background="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:visibility="visible">

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_camera"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_camera" />

                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:id="@+id/lnDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_8sdp">

                    <EditText
                        android:id="@+id/edtNameProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/my_selling_hint_name_product"
                        android:imeOptions="actionDone"
                        android:padding="@dimen/_12sdp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_12sdp"
                        android:background="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/edtDetail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/my_selling_hint_detail_product"
                        android:imeOptions="actionDone"
                        android:padding="@dimen/_12sdp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/tvFinish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/my_selling_finish"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp" />
</RelativeLayout>